# apdlb

./: .gitignore  CMakeLists.txt  Makefile  README.md  ag_perf_data.txt  ag_perf_data_calc.txt  pool_perf_data.txt  pool_perf_data_calc.txt  test.cpp
.github/workflows/: main_ci.yml
apert_gen/: CMakeLists.txt  auto_run.py  rose_matvecp_bm.cpp  rose_sorting_bm.cpp
autoParallelization/tests/: Makefile.in
benchmark/: CMakeLists.txt
benchmark/apert_gen/: CMakeLists.txt  rose_matvecp_bm.cpp  serial_matvecp_bm.cpp  serial_sorting_bm.cpp  suap_01_matvecp_bm.cpp  suap_01_sorting_bm.cpp  suap_02_matvecp_bm.cpp  suap_02_sorting_bm.cpp  suap_04_matvecp_bm.cpp  suap_04_sorting_bm.cpp  suap_08_matvecp_bm.cpp  suap_08_sorting_bm.cpp  wspdr_-1_sorting_bm.cpp  wspdr_01_matvecp_bm.cpp  wspdr_01_sorting_bm.cpp  wspdr_02_matvecp_bm.cpp  wspdr_02_sorting_bm.cpp  wspdr_04_sorting_bm.cpp  wspdr_08_matvecp_bm.cpp  wspdr_08_sorting_bm.cpp  wspdr_16_sorting_bm.cpp  wspdr_sorting_bm.cpp
benchmark/kernels/: CMakeLists.txt  collatz_conjecture.cpp  collatz_conjecture_bm.cpp  kbm_utils.hpp  matvecp.cpp  matvecp_bm.cpp  nbody_v1_bm.cpp  sorting.cpp  sorting_bm.cpp  utils.h  utils.hpp
benchmark/tuss/: CMakeLists.txt  Makefile  README.md
benchmark/tuss/scripts/benchmark/: __main__.py
benchmark/tuss/src/core/tests/: CMakeLists.txt  utility_tests.cc
benchmark/tuss/src/cpusim/: main.cc  tp_engine.cpp  tp_engine.h
benchmark/tuss/src/cpusim/tp_kernels/: tp_basic_kernel.cpp
rose_docker/: Dockerfile
src/ap/: CMakeLists.txt  archived.cpp  archived.h  config.hpp  driver.cpp  driver.h  ert_insertion.cpp  ert_insertion.h  loop_analysis.cpp  loop_analysis.h  main.cc  types.hpp  utils.cpp  utils.h
src/ert/: CMakeLists.txt  message.hpp  pool.hpp  serial_pool.hpp  suap_pool.hpp  task.hpp  timer.hpp  utils.hpp  utst.hpp  wspdr_pool.hpp
src/ert/tests/: CMakeLists.txt  pool_perf_tests.cc  suap_pool_tests.cc  tests_helper.hpp  tests_kernels.hpp  wspdr_pool_tests.cc
src/rc/: CMakeLists.txt  archived.cpp  archived.h  autoPar.cc  autoParSupport.cpp  autoParSupport.h  auto_par_driver.cpp  auto_par_driver.h  auto_par_lib.cpp  auto_par_lib.h  driver.cpp  ert_insertion.cpp  ert_insertion.h  loop_analysis.cpp  loop_candidate.cpp  main.cc  utils.cpp  utils.h
src/tp/: CMakeLists.txt  macros.hpp  message.hpp  pool.hpp  sap.hpp  suap.hpp  suap_pool.hpp  task.hpp  timer.hpp  timer_impl.hpp  utils.cpp  utils.h  utst.hpp  wspd.cpp  wspd.h  wspdr.cpp  wspdr.h  wspdr.hpp  wspdr_impl.hpp  wspdr_pool.hpp  wspdr_worker.hpp  wspdr_worker_impl.hpp
src/tp/tests/: CMakeLists.txt  pool_perf_tests.cc  suap_collatz_conjecture_tests.cc  suap_pool_tests.cc  suap_simple_print_tests.cc  tests_kernels.hpp  wspdr_collatz_conjecture_tests.cc  wspdr_pool_tests.cc  wspdr_simple_print_tests.cc  wspdr_tests.cc
